# Copyright 2024, Toyota Motor Corporation
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "hdrs",
    srcs = [
        "byte.hpp",
    ],
)

cc_library(
    name = "internal",
    hdrs = [":hdrs"],
    visibility = [
        ":__subpackages__",
        "//arene/base:__pkg__",
    ],
    deps = [
        "//arene/base:constraints",
        "//arene/base:contracts",
        "//arene/base/stdlib_choice:climits",
        "//arene/base/stdlib_choice:cstdint",
        "//arene/base/stdlib_choice:enable_if",
        "//arene/base/stdlib_choice:is_integral",
        "//arene/base/stdlib_choice:is_signed",
        "//arene/base/utility:to_underlying",
    ],
)

filegroup(
    name = "package",
    srcs = [
        "BUILD.bazel",
        ":hdrs",
    ],
    visibility = ["//arene/base:__pkg__"],
)
